InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupClassContribution__c/vlocity_ins__GroupClassContribution__c.object-meta.xml
<CustomObject>
    <description>Represents employer or group contributions for group class members and their dependents on per product category such as medical, dental or vision. Master-detail child object of a Group Class.</description>
    <label>Group Class Contribution</label>
    <nameField>
        <label>Group Class Contribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Class Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>