InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupClassContribution__c/fields/vlocity_ins__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
    <description>The date of the group class contribution is no longer available for quoting</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>