InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupClassContribution__c/fields/vlocity_ins__GroupClassId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GroupClassId__c</fullName>
    <description>Id of the GroupClass for which the contributions are defined.</description>
    <label>Group Class</label>
    <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
    <relationshipLabel>Group Class Contributions</relationshipLabel>
    <relationshipName>GroupClassContributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>