InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupClassContribution__c/fields/vlocity_ins__MemberType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MemberType__c</fullName>
    <description>Defines the type of the member for which the contribution is defined such as subscriber or dependent.</description>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>