InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupClassContribution__c/fields/vlocity_ins__ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductCategory__c</fullName>
    <description>Category of an Insurance product such as medical, dental or vision.</description>
    <label>Product Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>